Reworked how Eclipse is packaged and launched, and automate Java (except for Windows) and Eclipse packaging processes.