@@ -9,19 +9,19 @@ import org.sireum.util._
  */
 object EclipseLauncher {
   def run(elmode : LaunchEclipseMode) {
-    new EclipseLauncher().execute
+    new EclipseLauncher().execute(elmode)
   }
 
   def run(elmode : LaunchSireumDevMode) {
-    new EclipseLauncher().execute
+    new EclipseLauncher().execute(elmode)
   }
 
   def run(elmode : LaunchCompilerDevMode) {
-    new EclipseLauncher().execute
+    new EclipseLauncher().execute(elmode)
   }
 
   def run(elmode : LaunchBakarV1Mode) {
-    new EclipseLauncher().execute
+    new EclipseLauncher().execute(elmode)
   }
 }
 
@@ -29,21 +29,45 @@ object EclipseLauncher {
  * @author <a href="mailto:robby@k-state.edu">Robby</a>
  */
 class EclipseLauncher {
-  def execute {
-    var eclipseRelPath = "apps/eclipse/classic/eclipse"
-    OsArchUtil.detect match {
-      case OsArch.Mac32 | OsArch.Mac64 =>
-      case OsArch.Linux32 | OsArch.Linux64 => 
-        eclipseRelPath += ".sh"
-      case OsArch.Win32 | OsArch.Win64 =>
-        eclipseRelPath += ".bat"
-      case _ =>
-        scala.Console.err.println("Unsupported platform")
-        scala.Console.err.flush
-        sys.exit(-1)
-    }
-    val eclipse = new File(System.getenv("SIREUM_HOME"), eclipseRelPath).getCanonicalPath
+  def execute(opt : LaunchEclipseAppMode) {
+    val osArch = OsArchUtil.detect
+    val exeExt = if (osArch == OsArch.Win32 || osArch == OsArch.Win64) ".exe" else ""
+    val sireumHome = System.getenv("SIREUM_HOME")
+    val javaHomeDir = new File(sireumHome, "apps/platform/java")
+    var javaOptions =
+      if (System.getenv("JAVA_OPTIONS") != null)
+        ilist(System.getenv("JAVA_OPTIONS"))
+      else ilist("-XX:MaxPermSize=512m", "-Xms128m", "-Xmx1024m")
+    var java =
+      if (javaHomeDir.exists) new File(javaHomeDir, "bin/java" + exeExt).getCanonicalPath
+      else "java"
+    val launcherVersion = "1.3.0.v20120522-1813"
+    val launcherJarRelPath = "apps/eclipse/classic/plugins/org.eclipse.equinox.launcher_" + launcherVersion + ".jar"
+    val launcherJar = new File(sireumHome, launcherJarRelPath).getCanonicalPath
+    val launcherArgs =
+      ilist(
+        "-Dosgi.requiredJavaVersion=1.5",
+        "-jar", launcherJar,
+        "-showsplash", "org.eclipse.platform",
+        "--launcher.defaultAction", "openFile")
+
+    val cmd =
+      osArch match {
+        case OsArch.Mac32 | OsArch.Mac64 =>
+          java :: javaOptions ++
+            ilist(
+              "-Xdock:icon=../Resources/Eclipse.icns",
+              "-XstartOnFirstThread",
+              "-Dorg.eclipse.swt.internal.carbon.smallFonts") ++
+              launcherArgs ++ opt.args
+        case OsArch.Linux32 | OsArch.Linux64 | OsArch.Win32 | OsArch.Win64 =>
+          java :: javaOptions ++ launcherArgs ++ opt.args
+        case _ =>
+          scala.Console.err.println("Unsupported platform")
+          scala.Console.err.flush
+          sys.exit(-1)
+      }
     val e = new Exec
-    e.run(-1, ilist(eclipse), None)
+    e.run(-1, cmd, None)
   }
 }
